integration_tests/codegen_fail/fail/union/trait_same_type_pretty.rs
use juniper::graphql_union;

#[graphql_union]
trait Character {
    fn a(&self) -> Option<&u8>;
    fn b(&self) -> Option<&u8>;
}

fn main() {}
